# baseball-trajectory

./: .gitignore  404.html  README.md  app.py  index.html  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: docs.yml
data/: index.html
deployment/: index.html
docs/: data.md  deployment.md  getting-started.md  index.md  limitations.md  methods.md  metrics.md  modeling.md  reference.md  user-guide.md
getting-started/: index.html
limitations/: index.html
methods/: index.html
metrics/: index.html
modeling/: index.html
reference/: index.html
search/: search_index.json
src/baseball_trajectory/: __init__.py  __main__.py  app.py  data.py  model.py  plots.py  similarity.py  styles.css
tests/: test_model.py  test_similarity.py
user-guide/: index.html
