[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "baseball-trajectory"
version = "0.1.0"
description = "Baseball trajectory modeling and visualization"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "shiny",
    "polars",
    "numpy",
    "statsmodels",
    "matplotlib",
    "requests",
    "great-tables",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocs-glightbox",
]

[project.scripts]
baseball-trajectory = "baseball_trajectory.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/baseball_trajectory"]
include = ["src/baseball_trajectory/*.css"]
